Tak jsem skoro stihla ten pátek. :D Tady je nástřel proposalu. Prakticky jsem jen krapet změnila formátování tvého kódu a připsala jsem úvod popisující, o co nám jde a kde vidíme momentálně největší problém. Dej vědět, jestli sis to představoval jinak

--- a/Spider.ipynb
+++ b/Spider.ipynb
@@ -4,7 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Start of a nice jupyter"
+    "# Project proposal\n",
+    "### _Josef Švec & Markéta Malá_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to work on the analysis of Prague's real estate market. The source for our data is the server Sreality.cz from Seznam that represents a trully extensive pool of supply of real estates either for rent or sale (and that is due to the coronavirus crisis even more extensive than ever before). We'd like to narrow our focus only to rents within Prague.\n",
+    "\n",
+    "Below, at the very end of this code, there are listed all the variables that we should be able to scrape from the web (with a bit of time and luck). Based on this list we came to conclusion that the most interesting way of approaching the data could be to import a simple map of Prague and visually express the average prices per m^2 on it (e.g. by different intensity of colour or by hight of a surface in a 3D model). Also a histogram comparing the prices across different Prague's districts.\n",
+    "\n",
+    "Nevertheless, currently we are dealing with a problem (stemming from the dynamic character of the page that requires usage of Selenium) of technically too demanding scraping. Literally, we counted that by our proposed way the scraping would take hours, because every link has to be openned separatelly and that takes time... If there is a better approach to this we will be very happy to learn it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Start of a nice jupyter"
    ]
   },
   {
@@ -47,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How is the link structured"
+    "## How is the link structured "
    ]
   },
   {
@@ -197,14 +216,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selenium"
+    "### Selenium"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### code for one page"
+    "#### code for one page"
    ]
   },
   {
@@ -297,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## for many pages"
+    "### for many pages"
    ]
   },
   {
@@ -383,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Now we need to decide what we want from individual sites."
+    "## Now we need to decide what we want from individual sites."
    ]
   },
   {
@@ -412,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## magic from now on "
+    "### magic from now on "
    ]
   },
   {
@@ -534,8 +553,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Now we can collect data \n",
-    "## is it going to be a dictionary of dictionaries? or json?"
+    "## Now we can collect data \n",
+    "### is it going to be a dictionary of dictionaries? or json?"
    ]
   },
   {
