comments addedd & updated README

--- a/OOP_spider.ipynb
+++ b/OOP_spider.ipynb
@@ -22,15 +22,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this class is used to scrape the dataset\n",
     "class Downloader_SR():\n",
     "    def __init__(self, link = 'https://www.sreality.cz/hledani', lease = 'pronajem', typ = 'byty', region = 'praha'):\n",
+    "        #we have to define variable on sreality to define the desired dataset\n",
+    "        #There is couple of variables to explain how the scrape can differ\n",
+    "        #For example we could change lease= \"prodej\"\n",
     "        self.link = link + '/' + lease+ '/' + typ +'/' + region + '?strana='\n",
-    "        self.n_matches = self.number_pg()\n",
-    "        self.n_pages = ceil(self.n_matches/20)\n",
-    "        self.link_set = [self.link + str(k+1) for k in range(0, self.n_pages)]\n",
-    "        self.link_container = []\n",
+    "        self.n_matches = self.number_pg() #this fetches automaticly the number of matches in our criteria\n",
+    "        self.n_pages = ceil(self.n_matches/20) #then it calculates number of pages on which the links are distributed\n",
+    "        self.link_set = [self.link + str(k+1) for k in range(0, self.n_pages)] #with the above information we generate links to access the pages\n",
+    "        self.link_container = [] # here we will store links of individual properties\n",
     "        \n",
     "    def number_pg(self):\n",
+    "        #this method automaticly fetches number of matches in our criteria\n",
     "        driver = webdriver.Chrome(\"C:\\\\chromedriver\\\\chromedriver.exe\")\n",
     "        driver.get(self.link)\n",
     "        time.sleep(2)\n",
@@ -43,12 +48,16 @@
     "    \n",
     "    @staticmethod\n",
     "    def create_csv():\n",
+    "        #this method saves links of individual properties into csv\n",
+    "        #this allows for later scrape or verification of the links with the dataset\n",
     "        dat = datetime.datetime.now()\n",
     "        with open(f'links{dat.day}.{dat.month}.{dat.year}.csv', 'w') as f:\n",
     "            writer = csv.writer(f, delimiter = \";\", lineterminator = '\\n')\n",
     "            writer.writerow([f\"These link were scraped on {dat.day}.{dat.month}.{dat.year} after {dat.hour}:{dat.minute}\"])\n",
     "    \n",
     "    def find_a(self, limit = 1):\n",
+    "        # this method fetches links of individual properties\n",
+    "        #\n",
     "        link_base = \"https://www.sreality.cz\"\n",
     "        self.create_csv()\n",
     "        driver = webdriver.Chrome(\"C:\\\\chromedriver\\\\chromedriver.exe\")\n",
@@ -75,6 +84,7 @@
     "        driver.quit()\n",
     "        \n",
     "    def dataF(self):\n",
+    "        #this method gathers the final data\n",
     "        starto_time = time.time()\n",
     "        box = []\n",
     "        driver = webdriver.Chrome(\"C:\\\\chromedriver\\\\chromedriver.exe\")\n",
@@ -82,15 +92,19 @@
     "            driver.get(link)\n",
     "            time.sleep(2)\n",
     "            gist = driver.execute_script(\"return document.documentElement.outerHTML\")\n",
+    "            #As sreality is constantly updated, it may happen that the links stop existing before we get to scrape it\n",
+    "            #This exeption handles it\n",
     "            try:\n",
+    "                #here an object property is created and appended to list box\n",
     "                pro = Property(gist)\n",
-    "                box.append(pro.data)\n",
+    "                box.append(pro.data) # we only append a variable data(It is a pandas DataFrame) of the object pro\n",
     "            except:\n",
     "                print(\"a link cannot be accessed\")\n",
     "            \n",
     "            elapsed_time = time.time() - starto_time\n",
     "            print(f\"Property has been considered {link[49:]} ; {round((len(box)/len(self.link_container))*100,1)}% finished; {round(elapsed_time/60,2)} minutes elapsed\")\n",
     "        driver.quit()\n",
+    "        #after objects are created for all individual properties, they are appended into an DataFrame\n",
     "        self.df = pd.concat(box,axis = 0, sort = True)"
    ]
   },
@@ -101,14 +115,24 @@
    "outputs": [],
    "source": [
     "class Property():\n",
+    "    #this an object that is created for each individual property and it is used in method dataF of class Downloader SR\n",
     "    def __init__(self, soupy = \" \"):\n",
     "        self.items = {}\n",
+    "        #this class prefers to get html data\n",
+    "         '''\n",
+    "         we could only receive a link and fetch the html data in this object, however it was more time demanding\n",
+    "         due to the fact that we are scraping dynamic webpages and we use selenium.\n",
+    "         If we get the html data in this object, we would have to always open and close the webdriver and \n",
+    "         it was not possible due to time concerns\n",
+    "         '''\n",
     "        try:\n",
     "            self.parser(soupy)\n",
     "            self.data = self.cr_data()    \n",
     "        except:\n",
+    "            #it allows for no html data to be receive in order to test it by method scraoe\n",
     "            print(\"no suitable html data were given\")\n",
     "    def parser(self, gist):\n",
+    "        #this method finds the variable in the parsed html\n",
     "        info = BeautifulSoup(gist, \"lxml\")\n",
     "        lists = info.find_all(\"li\")\n",
     "        self.items[\"Title\"] = info.find(\"span\",{\"itemprop\":\"name\"}).findChild().get_text().replace(\"\\n\",\"\").replace(\"\\xa0\",\" \")\n",
@@ -140,19 +164,35 @@
     "            self.items[column] = keys_a\n",
     "            \n",
     "    def cr_data(self):\n",
+    "        #after the variables are found, this method writes them into a dataframe in a desired format\n",
     "        vals = list(self.items.values())\n",
     "        keys = list(self.items.keys())\n",
     "        df= pd.DataFrame(zip(vals)).transpose()\n",
     "        df.columns = keys\n",
     "        return df\n",
     "    \n",
-    "    #this is an archaic class; no use other than test\n",
+    "    \n",
     "    def scrape(self, link):\n",
+    "        # this method is used for testing \n",
     "        driver = webdriver.Chrome(\"C:\\\\chromedriver\\\\chromedriver.exe\")\n",
     "        driver.get(link)\n",
     "        res1 = driver.execute_script(\"return document.documentElement.outerHTML\")\n",
     "        self.parser(res1)\n",
     "        self.data = self.cr_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code is run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "an object is create of class Downloade_SR() and the dataset is obtained"
    ]
   },
   {
@@ -10548,7 +10588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "first.df.to_csv('dataset.csv', sep = ';')"
+    "first.df.to_csv('dataset1.csv', sep = ';')"
    ]
   },
   {
@@ -10563,7 +10603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test of Object property"
+    "## Testing of Object property"
    ]
   },
   {
@@ -10719,7 +10759,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Couple of improvements could have been made to the dataF() method. The print did not have to print if the link stop existing in the mean time of scraping. The print could have calculated estimated time and number of properties scraped. The properties could have been appended to csv in case of error. There could be intoduced variable to be able to scrape the list of link in steps. Although, we did not do implement these improvement as the scraping is a lenthy processes. Once we scraped the data, the improvement would not have any affect on the result. It would just improve future experience of scraping."
+    "### Possible improvement that were not implemented"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Couple of improvements could have been made to the dataF() method of the class Downloader_SR. \n",
+    "<br><br>\n",
+    "</ul>\n",
+    "<li>\n",
+    "1) The print did not have to print if the link stop existing in the mean time of scraping.</li> \n",
+    "<li>\n",
+    "2) The print could have calculated estimated time and number of properties scraped. </li>\n",
+    "<li>\n",
+    "3) The properties could have been appended to csv in case of error. </li>\n",
+    "<li>\n",
+    "4) There could have been intoduced a variable - to be able to scrape links in steps. </li>\n",
+    "</ul><br>\n",
+    "Although, we did not do implement these improvement because the scraping is a lenthy process. Once we scraped the data, the improvement would not have  had any affect on the result. It would just improve future experience of scraping."
    ]
   }
  ],
