--- a/Spider.ipynb
+++ b/Spider.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Start of a nice jupyter"
+    "## Code"
    ]
   },
   {
@@ -127,6 +127,13 @@
    "metadata": {},
    "source": [
     "According to number of matches we can calculate the number of pages from which we have to get the links"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "there is 7536 properties and they are displayed 20 per page hence we can calculate the total number of pages"
    ]
   },
   {
@@ -443,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### magic from now on "
+    "### here we colled variables"
    ]
   },
   {
@@ -592,8 +599,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now we can collect data \n",
-    "### is it going to be a dictionary of dictionaries? or json?"
+    "## Now we can collect data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because we collect the variables as list we can access both name and distance"
    ]
   },
   {
@@ -615,20 +628,6 @@
    "source": [
     "dict['Tram:'][1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
