--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,29 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([  11,  427, 2216, 1904,  967,  667, 1453], dtype=int64),\n",
+       "(array([  11,  427, 2216, 1904,  967,  667, 1454], dtype=int64),\n",
        " array([        0,      5000,     10000,     15000,     20000,     25000,\n",
        "            30000, 100000000]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.histogram(data['cena'], bins = [0,5000,10000,15000,20000,25000,30000, 100000000])"
+    "np.histogram(data1['Cena'], bins = [0,5000,10000,15000,20000,25000,30000, 100000000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -76,13 +76,13 @@
     }
    ],
    "source": [
-    "plt.hist(data['Cena'], np.arange(100000, step = 5000))\n",
+    "plt.hist(data1['Cena'], np.arange(100000, step = 5000))\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -97,13 +97,13 @@
     }
    ],
    "source": [
-    "plt.hist(data['Cena'], np.arange(40000,100000, step = 5000))\n",
+    "plt.hist(data1['Cena'], np.arange(40000,100000, step = 5000))\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "plt.hist(data['Cena'], np.arange(100000,200000, step = 5000))\n",
+    "plt.hist(data1['Cena'], np.arange(100000,200000, step = 5000))\n",
     "plt.show()"
    ]
   },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
