environ variable added

--- a/OOP_spider.ipynb
+++ b/OOP_spider.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "from bs4 import BeautifulSoup\n",
     "import datetime\n",
     "import time\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
@@ -36,7 +37,7 @@
     "        \n",
     "    def number_pg(self):\n",
     "        #this method automaticly fetches number of matches in our criteria\n",
-    "        driver = webdriver.Chrome(\"C:\\\\chromedriver\\\\chromedriver.exe\")\n",
+    "        driver = webdriver.Chrome(os.environ['selenium_chr_driver']) # place for the current chrome driver\n",
     "        driver.get(self.link)\n",
     "        time.sleep(2)\n",
     "        res1 = driver.execute_script(\"return document.documentElement.outerHTML\")\n",
@@ -60,7 +61,7 @@
     "        #\n",
     "        link_base = \"https://www.sreality.cz\"\n",
     "        self.create_csv()\n",
-    "        driver = webdriver.Chrome(\"C:\\\\chromedriver\\\\chromedriver.exe\")\n",
+    "        driver = webdriver.Chrome(os.environ['selenium_chr_driver'])\n",
     "        dat = datetime.datetime.now()\n",
     "        start_time = time.time()\n",
     "        for page in self.link_set[:limit]:\n",
@@ -87,7 +88,7 @@
     "        #this method gathers the final data\n",
     "        starto_time = time.time()\n",
     "        box = []\n",
-    "        driver = webdriver.Chrome(\"C:\\\\chromedriver\\\\chromedriver.exe\")\n",
+    "        driver = webdriver.Chrome(os.environ['selenium_chr_driver'])\n",
     "        for link in self.link_container:\n",
     "            driver.get(link)\n",
     "            time.sleep(2)\n",
@@ -174,7 +175,7 @@
     "    \n",
     "    def scrape(self, link):\n",
     "        # this method is used for testing \n",
-    "        driver = webdriver.Chrome(\"C:\\\\chromedriver\\\\chromedriver.exe\")\n",
+    "        driver = webdriver.Chrome(os.environ['selenium_chr_driver'])\n",
     "        driver.get(link)\n",
     "        res1 = driver.execute_script(\"return document.documentElement.outerHTML\")\n",
     "        self.parser(res1)\n",
