Partial save Updating readme, renaming files, adding a bit to visualisation

--- a/Data_understanding_and_processing.ipynb
+++ b/Data_understanding_and_processing.ipynb
@@ -238,7 +238,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "data = pd.read_csv(\"dataset.csv\", sep = ';') #uploading our scraped data\n",
+    "data = pd.read_csv(\"scraped_dataset.csv\", sep = ';') #uploading our scraped data\n",
     "data.head(4)"
    ]
   },
@@ -2473,9 +2473,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2978,18 +2976,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1.to_csv('data1.csv', sep=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "%store data1 #storing data1 to use in other jupyter notebooks"
+    "data1.to_csv('data1.csv', sep=';')\n",
+    "#%store data1 \n",
+    "'''storing data1 to use in other jupyter notebooks''' \n",
+    "# we used this jupyter magic at first but we found it less reliable and our dataset could not be accessed without running this code"
    ]
   }
  ],
@@ -2998,6 +2988,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
